Fix carousel vertical alignment #61

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -17,6 +17,7 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
+        align-items: center;
         flex-grow: 1;
     }
 }
